# aegis

./: .gitignore  README.md  pyproject.toml
examples/: real_turn_anthropic.py  real_turn_ds4.py  reference_agent.py
harness-core/: pyproject.toml
harness-core/src/harness_core/: __init__.py  agent.py  cost.py  engine.py  gate.py  hooks.py  memory.py  observability.py  provider.py  subagent.py  task.py  tenant.py  tools.py
harness-core/tests/: test_import_boundary.py
hermes-adapter/: pyproject.toml
hermes-adapter/src/hermes_adapter/: __init__.py  echo.py  impl.py  memory.py  normalize.py  obs.py
hermes-adapter/tests/: test_memory.py  test_reference_turn.py
