[project]
name = "harness-core"
version = "0.1.0"
description = "Aegis harness-core — vendor-free agent-harness contracts (no engine deps)."
requires-python = ">=3.12"
# Intentionally EMPTY: stdlib only. MCP (tools/data) and OTel-GenAI (observability) are
# adopted at the WIRE level — modeled as JSON Schema dicts / attribute-key constants — so
# they are not import-time dependencies of the core in v1. This is what lets the
# import-boundary test run in a truly clean venv.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_core"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
